Custom events to player,  sliders react to touch events

--- a/client/src/player.css
+++ b/client/src/player.css
@@ -121,6 +121,12 @@
   .audio-player svg, .audio-player img {
     display: block;
   }
+
+  .audio-player .controls .current-time {
+    display: block;
+    width: 5em;
+    text-align: right;
+  }
   
   @keyframes spin {
     from {
