--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -30,6 +30,39 @@ body {
     background-size: contain;
   }
 
+.expanded {
+    background-image: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8'?%3E%3Csvg width='12px' height='16px' viewBox='0 0 12 16' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 40.3 (33839) - http://www.bohemiancoding.com/sketch --%3E%3Ctitle%3Etriangle-down%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cdefs%3E%3C/defs%3E%3Cg id='Octicons' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='triangle-down' fill='%23000000'%3E%3Cpolygon id='Shape' points='0 5 6 11 12 5'%3E%3C/polygon%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding-left: 1.2em;
+    cursor: pointer;
+}
+
+.collapsed {
+    background-image: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8'?%3E%3Csvg width='6px' height='16px' viewBox='0 0 6 16' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 40.3 (33839) - http://www.bohemiancoding.com/sketch --%3E%3Ctitle%3Etriangle-right%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cdefs%3E%3C/defs%3E%3Cg id='Octicons' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='triangle-right' fill='%23000000'%3E%3Cpolygon id='Shape' points='0 14 6 8 0 2'%3E%3C/polygon%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    
+}
+
+.content-section {
+    clear: both;
+}
+
+#info-cover {
+    min-width: 160px;
+    min-height: 160px;
+    max-width: 300px;
+    max-height: 424px;
+    float: left;
+    margin-right: 1em;  
+}
+
+#info-desc {
+    display: inline;
+    min-width: 300px;
+}
+  
+  
+
   #search-btn {
     width: 1em;
     height: 1em;
