--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -92,6 +92,17 @@ h1.top-header {
     display: none;
 }
 
+span.transcoded {
+    margin-left: 0.5em;
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8'?%3E%3Csvg width='14px' height='16px' viewBox='0 0 14 16' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 40.3 (33839) - http://www.bohemiancoding.com/sketch --%3E%3Ctitle%3Epulse%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cdefs%3E%3C/defs%3E%3Cg id='Octicons' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='pulse' fill='%23000000'%3E%3Cpolygon id='Shape' points='11.5 8 8.8 5.4 6.6 8.5 5.5 1.6 2.38 8 0 8 0 10 3.6 10 4.5 8.2 5.4 13.6 9 8.5 10.6 10 14 10 14 8'%3E%3C/polygon%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  }
+  
+
 @media (max-width: 1024px) {
     h1.top-header {
         font-size: 1.8rem;
