--- a/client/src/player.css
+++ b/client/src/player.css
@@ -43,11 +43,26 @@
     position: absolute;
     pointer-events: all;
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.32);
+    z-index: 100;
   }
   
   .audio-player .controls .slider .progress .pin {
     height: 24px;
   }
+
+  .audio-player .slider .player-cache {
+    width: 100%;
+    height: 3px;
+    position: relative;
+    top: 8px;
+    cursor: default;
+}
+
+.audio-player .player-cache .cache-bar {
+  background-color: rgb(138, 207, 168);
+  position: absolute;
+  height: 3px;
+}
   
   .audio-player .controls {
     font-family: 'sans-serif';
