Display plain text info in <pre> element
and limit dont float image for small resolutions

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -47,8 +47,14 @@ body {
     min-height: 160px;
     max-width: 300px;
     max-height: 424px;
-    float: left;
-    margin-right: 1em;  
+    margin-right: 1em; 
+    margin-bottom: 1em;
+}
+
+@media (min-width: 740px) {
+    #info-cover {
+        float: left;
+    }
 }
 
 #info-desc {
