--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -49,13 +49,14 @@ body {
   
 
 .position-sync {
+    display: none;
     float: right;
     width: 1.3em;
     height: 1.5em;
     background-size: contain;
     background-repeat: no-repeat;
     margin-right: 0.5em;
-    background-image: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8'?%3E%3Csvg version='1.1' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg' xmlns:cc='http://creativecommons.org/ns%23' xmlns:dc='http://purl.org/dc/elements/1.1/' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns%23'%3E%3Cmetadata%3E%3Crdf:RDF%3E%3Ccc:Work rdf:about=''%3E%3Cdc:format%3Eimage/svg+xml%3C/dc:format%3E%3Cdc:type rdf:resource='http://purl.org/dc/dcmitype/StillImage'/%3E%3Cdc:title/%3E%3C/cc:Work%3E%3C/rdf:RDF%3E%3C/metadata%3E%3Cpath d='m0 19' fill='%23006fd1' fill-rule='evenodd'/%3E%3Cg transform='matrix(.77724 0 0 .8063 -2.1985 -1.3898)' fill='%23007bff' fill-rule='evenodd'%3E%3Cpath d='m16 26c2.419 0 4.4367-1.7178 4.9-4h2.0291c-0.48523 3.3923-3.4026 6-6.9291 6-2.4445 0-4.5963-1.253-5.8482-3.1518l-1.1518 1.1518v-1-2-1h0.070889 2.0291 1.9l-1.3919 1.3919c0.8481 1.5539 2.4969 2.6081 4.3919 2.6081z'/%3E%3Cpath d='m20.9 20h-0.89998-1l1.3919-1.3918c-0.84807-1.5539-2.4969-2.6082-4.3919-2.6082-2.419 0-4.4367 1.7178-4.9 4h-2.0291c0.48523-3.3923 3.4026-6 6.9291-6 2.4445 0 4.5963 1.253 5.8483 3.1518l1.1517-1.1517v3.9999h-0.07089z'/%3E%3C/g%3E%3Cpath d='m2.3051 2.1695v27.661l24.407-14.102c-8.157-4.3764-15.103-8.9507-24.407-13.559z' fill='none' stroke='%23007bff' stroke-width='2'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8'?%3E%3Csvg version='1.1' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg' xmlns:cc='http://creativecommons.org/ns%23' xmlns:dc='http://purl.org/dc/elements/1.1/' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns%23'%3E%3Cmetadata%3E%3Crdf:RDF%3E%3Ccc:Work rdf:about=''%3E%3Cdc:format%3Eimage/svg+xml%3C/dc:format%3E%3Cdc:type rdf:resource='http://purl.org/dc/dcmitype/StillImage'/%3E%3Cdc:title/%3E%3C/cc:Work%3E%3C/rdf:RDF%3E%3C/metadata%3E%3Cpath d='m0 19' fill='%23006fd1' fill-rule='evenodd'/%3E%3Cg transform='matrix(2.1138 0 0 2.0847 -17.889 -27.831)' fill='%23007bff' fill-rule='evenodd'%3E%3Cpath d='m16 26c2.419 0 4.4367-1.7178 4.9-4h2.0291c-0.48523 3.3923-3.4026 6-6.9291 6-2.4445 0-4.5963-1.253-5.8482-3.1518l-1.1518 1.1518v-1-2-1h0.070889 2.0291 1.9l-1.3919 1.3919c0.8481 1.5539 2.4969 2.6081 4.3919 2.6081z'/%3E%3Cpath d='m20.9 20h-0.89998-1l1.3919-1.3918c-0.84807-1.5539-2.4969-2.6082-4.3919-2.6082-2.419 0-4.4367 1.7178-4.9 4h-2.0291c0.48523-3.3923 3.4026-6 6.9291-6 2.4445 0 4.5963 1.253 5.8483 3.1518l1.1517-1.1517v3.9999h-0.07089z'/%3E%3C/g%3E%3Cpath d='m11.134 9.4892v13.9l12.183-7.0864c-4.0716-2.1992-7.5388-4.4979-12.183-6.8139z' fill='%23007bff' fill-rule='evenodd' stroke-width='0'/%3E%3C/svg%3E");
 }
 
 .folder-download {
