tuning player controll buttons

--- a/client/src/player.css
+++ b/client/src/player.css
@@ -171,12 +171,12 @@
   @media (max-width: 480px) {
   .audio-player .extra-buttons {
     display: flex;
-    width: 70px;
+    width: 74px;
     justify-content: space-between;
     position: absolute;
     bottom: 64px;
     right: 16px;
-    background-color: #2222;
+    background-color: #dddddde8;
     padding: 5px;
     border-radius: 7px;
     z-index: 9999;
