--- a/client/src/player.css
+++ b/client/src/player.css
@@ -28,6 +28,10 @@
     cursor: pointer;
     position: relative;
   }
+
+  .audio-player .controls .slider .progress {
+    border: 2px  #D8D8D8 solid;
+  }
   .audio-player .slider .progress {
     background-color: #0275d8;
     border-radius: inherit;
@@ -47,14 +51,14 @@
   }
   
   .audio-player .controls .slider .progress .pin {
-    height: 24px;
+    height: 32px;
   }
 
   .audio-player .slider .player-cache {
     width: 100%;
     height: 3px;
     position: relative;
-    top: 8px;
+    top: 16px;
     cursor: default;
 }
 
@@ -79,8 +83,8 @@
   .audio-player .controls .slider {
     margin-left: 16px;
     margin-right: 16px;
-    border-radius: 4px;
-    height: 8px;
+    border-radius: 8px;
+    height: 16px;
   }
   .audio-player .controls .slider .progress {
     width: 0;
@@ -88,7 +92,7 @@
   }
   .audio-player .controls .slider .progress .pin {
     right: -8px;
-    top: -9px;
+    top: -11px;
   }
   .audio-player .controls span {
     cursor: default;
